update cors, Colection api