@@ -5,7 +5,6 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -16,7 +15,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.*;
 
-@Slf4j
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -26,35 +24,23 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         this.jwtProvider = jwtProvider;
     }
 
-    private static final List<String> EXCLUDED_PATHS = List.of(
-            "/api/user/login",
-            "/api/user/register",
-            "/api/movies/generate-token"
-    );
-
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
 
-        String path = request.getServletPath();
+        String authHeader = request.getHeader("Authorization");
 
-        if (EXCLUDED_PATHS.contains(path) || isPublicEndpoint(request)) {
+        // Nếu không có header Authorization thì bỏ qua, để Spring xử lý permitAll
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        String authHeader = request.getHeader("Authorization");
-
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            sendErrorResponse(response, 401, "Thiếu hoặc sai định dạng Authorization header");
-            return;
-        }
-
-        String token = authHeader.substring(7);
         try {
+            String token = authHeader.substring(7);
             if (!jwtProvider.validateToken(token)) {
-                sendErrorResponse(response, 401, "JWT token không hợp lệ hoặc đã hết hạn");
+                sendErrorResponse(response, 403, "Invalid or expired JWT token");
                 return;
             }
 
@@ -62,40 +48,26 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String role = jwtProvider.getRoleFromToken(token);
 
             List<SimpleGrantedAuthority> authorities =
-                    Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role));
+                    List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
 
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(username, null, authorities);
-
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
             filterChain.doFilter(request, response);
-
         } catch (Exception e) {
-            SecurityContextHolder.clearContext();
-            log.error("JWT Filter Error: {}", e.getMessage());
-            sendErrorResponse(response, 401, "Lỗi xác thực JWT: " + e.getMessage());
+            sendErrorResponse(response, 403, "JWT processing error: " + e.getMessage());
         }
-    }
-
-    private boolean isPublicEndpoint(HttpServletRequest request) {
-        String path = request.getServletPath();
-        String method = request.getMethod();
-
-        return ("GET".equalsIgnoreCase(method) && (
-                path.matches("/api/movies(/\\d+)?") || path.startsWith("/api/movies/search")
-        )) || ("POST".equalsIgnoreCase(method) && path.equals("/api/movies/filter"));
     }
 
     private void sendErrorResponse(HttpServletResponse response, int status, String message) throws IOException {
         response.setStatus(status);
         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-
-        Map<String, Object> error = new HashMap<>();
-        error.put("status", status);
-        error.put("message", message);
-        error.put("data", null);
-
-        new ObjectMapper().writeValue(response.getOutputStream(), error);
+        new ObjectMapper().writeValue(response.getOutputStream(), Map.of(
+                "status", status,
+                "message", message,
+                "data", null
+        ));
     }
 }
+
